<resources>
    <string name="app_name" translatable="false">Scaffold</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="str_skip">skip</string>
    <string name="str_next">Next</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, et ipsum vituperata est, in illum mediocritatem mel. Ei clita regione appellantur pri, no sed ornatus debitis. Illum mediocritatem nam ut, mutat impetus deserunt vix ut. Ea sed habeo porro quaestio, mea ne veniam accommodare vituperatoribus.</string>
    <string name="str_choose_lang">Choose your language</string>
    <string name="str_welcome">Welcome laids!</string>
    <string name="str_lang_id" translatable="false">Bahasa Indonesia (ID)</string>
    <string name="str_lang_en" translatable="false">English (EN)</string>
    <string name="str_save">save</string>
    <string name="str_need_register">Don\'t have account yet?</string>
    <string name="str_register">Register</string>
    <string name="str_need_login">Already have account?</string>
    <string name="str_login">Login</string>
    <string name="str_login_to_begin">Please login to begin</string>
    <string name="str_register_to_begin">Please register to begin</string>
    <string name="str_forgot_passw">forgot password?</string>
    <string name="str_alt_login">Alternative login</string>
    <string name="str_register_phone">Phone no. +62</string>
    <string name="str_register_name">Username</string>
    <string name="str_register_passw">Password</string>
    <string name="str_profile">Profile</string>
    <string name="str_booking">Booking</string>
    <string name="str_bookmark">Bookmarked</string>
</resources>
