<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_standard">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:padding="@dimen/padding_xsmall"
                android:text="@string/str_register"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/_30ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_xsmall"
                android:padding="@dimen/padding_xsmall"
                android:text="@string/str_register_to_begin"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/font_size_standard" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:background="@drawable/bg_border"
                android:hint="@string/str_register_name"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/padding_xsmall"
                android:textColor="@color/textColorSecondary"
                android:textColorHint="@color/textColorSecondary"
                android:textSize="@dimen/font_size_large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:background="@drawable/bg_border"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/padding_xsmall"
                android:textColor="@color/textColorSecondary"
                android:textColorHint="@color/textColorSecondary"
                android:textSize="@dimen/font_size_large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:background="@drawable/bg_border"
                android:hint="@string/str_register_phone"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="@dimen/padding_xsmall"
                android:textColor="@color/textColorSecondary"
                android:textColorHint="@color/textColorSecondary"
                android:textSize="@dimen/font_size_large" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_standard"
                android:background="@drawable/bg_border"
                android:hint="@string/str_register_passw"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/padding_xsmall"
                android:textColor="@color/textColorSecondary"
                android:textColorHint="@color/textColorSecondary"
                android:textSize="@dimen/font_size_large" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_border_blue"
                android:text="@string/str_register"
                android:textColor="@color/white" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/padding_xxsmall"
                android:layout_marginBottom="@dimen/padding_standard">

                <View
                    style="@style/Divider"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/padding_large"
                    android:layout_marginRight="@dimen/padding_large" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/white"
                    android:padding="@dimen/padding_xsmall"
                    android:text="@string/str_alt_login"
                    android:textColor="@color/textColorTertiary"
                    android:textSize="@dimen/font_size_standard" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_large"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginEnd="@dimen/padding_xsmall"
                android:layout_marginRight="@dimen/padding_xsmall"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login_w_fb"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding_xxsmall"
                    android:layout_marginRight="@dimen/padding_xxsmall"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_border_blue_light"
                    android:text="Facebook"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_login_w_gl"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding_xxsmall"
                    android:layout_marginLeft="@dimen/padding_xxsmall"
                    android:layout_weight="1.0"
                    android:background="@drawable/bg_border_red"
                    android:text="Google"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>